--- a/UI/src/app/dashboard/iteration/iteration.component.html
+++ b/UI/src/app/dashboard/iteration/iteration.component.html
@@ -573,7 +573,7 @@
                       <p-multiSelect resetFilterOnHide="true" autofocusFilter="true" (onPanelShow)="onFilterClick(item)"
                         (onPanelHide)="onFilterBlur(item)" [options]="this.tableColumnData[item]"
                         [placeholder]="'Select '+ item" (onChange)="filter($event.value)" [optionValue]="'value'"
-                        [optionLabel]="'name'" [ngModel]="tableColumnForm[item]" styleClass="column-filter">
+                        [optionLabel]="'name'" [ngModel]="tableColumnForm[item]" class="custom-select" styleClass="column-filter">
                         <ng-template pTemplate="selectedItems">
                           <i class="pi pi-filter-icon pi-filter" style="font-size: 0.8rem"></i>
                         </ng-template>
@@ -628,4 +628,4 @@
 
 </p-dialog>
 <app-export-excel #exportExcel></app-export-excel>
-<app-recommendations></app-recommendations>
+<app-recommendations [filterData]="filterApplyData" [kpiList]="kpiList"></app-recommendations>
