--- a/UI/src/app/component/recommendations/recommendations.component.html
+++ b/UI/src/app/component/recommendations/recommendations.component.html
@@ -7,7 +7,7 @@
 <p-dialog [(visible)]="displayModal" [modal]="true" [draggable]="true" [resizable]="true">
     <p-header>
         <div>
-            Recommendations for Optimising KPI's
+            Recommendations for Optimising KPIs
         </div>
     </p-header>
     <div class="dialog-body p-mb-4">
@@ -15,7 +15,7 @@
             <p-tabPanel *ngFor="let tab of tabs" [header]="tab"
                 [headerStyleClass]="'tab-'+tab.split(' ').join('-')?.toLowerCase()">
 
-                <p-table #dt1 [value]="tabsContent[tab]" dataKey="kpiId"
+                <p-table #dt1 [value]="tabsContent[tab]" dataKey="kpiId" [loading]="loading"
                     [tableStyle]="{ 'min-width': '60rem', 'max-width': '60rem' }"
                     [globalFilterFields]="['kpiName', 'maturity']" class="p-mt-3">
                     <ng-template pTemplate="header">
@@ -32,13 +32,13 @@
                                     [style]="{'width':'100%'}" placeholder="Search" />
                             </th>
                             <th>
-                                <p-columnFilter [field]="maturity" matchMode="in" [showMenu]="false">
+                                <p-columnFilter field="maturity" matchMode="in" [showMenu]="false">
                                     <ng-template pTemplate="filter" let-value let-filter="filterCallback">
                                         <p-multiSelect [ngModel]="value" [options]="maturities"
-                                            placeholder="Select maturity" (onChange)="filter($event.value)">
+                                            placeholder="Select maturity" (onChange)="checkSelected($event.value); filter($event.value)" optionLabel="name" optionValue="value">
                                             <ng-template let-option pTemplate="item">
                                                 <div class="inline-block vertical-align-middle">
-                                                    <span class="ml-1 mt-1">{{option }}</span>
+                                                    <span class="ml-1 mt-1">{{option.name }}</span>
                                                 </div>
                                             </ng-template>
                                         </p-multiSelect>
@@ -65,6 +65,11 @@
                             </td>
                             <td>{{ item.recommendationSummary }}</td>
                             <td>{{ item.recommendationDetails }}</td>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="emptymessage">
+                        <tr>
+                            <td colspan="7">No recommendations found.</td>
                         </tr>
                     </ng-template>
                 </p-table>
