--- a/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.css
+++ b/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.css
@@ -183,7 +183,16 @@ label.btn-import-label {
   color: #fff;
 }
 
+::ng-deep .hiatoryOverlayWrapper .p-overlaypanel-content{
+  border-radius: 5px;
+  background-color: #686868;
+  padding: 0rem !important;
+  z-index: 0 !important;
+}
+
 .comment-inner-section{
+  min-width: 300px;
+  max-width: 800px;
   max-height: 400px;
   overflow-y: scroll;
   padding: 15px;
