added recommendations component on executive, backlog, dora, developer boards

--- a/UI/src/app/dashboard/backlog/backlog.component.html
+++ b/UI/src/app/dashboard/backlog/backlog.component.html
@@ -666,3 +666,4 @@
 </p-dialog>
 
 <app-export-excel #exportExcel></app-export-excel>
+<app-recommendations [filterData]="filterApplyData" [kpiList]="kpiList"></app-recommendations>
