--- a/UI/src/app/dashboard/developer/developer.component.html
+++ b/UI/src/app/dashboard/developer/developer.component.html
@@ -115,3 +115,4 @@
     </ng-template>
 
     <app-export-excel #exportExcel></app-export-excel>
+    <app-recommendations [filterData]="filterApplyData" [kpiList]="kpiList"></app-recommendations>
