--- a/UI/src/app/dashboard/executive/executive.component.html
+++ b/UI/src/app/dashboard/executive/executive.component.html
@@ -132,4 +132,4 @@
 
 <app-export-excel #exportExcel></app-export-excel>
 
-<app-recommendations></app-recommendations>
+<app-recommendations [filterData]="filterApplyData" [kpiList]="kpiList"></app-recommendations>
