--- a/UI/src/app/dashboard/dora/dora.component.html
+++ b/UI/src/app/dashboard/dora/dora.component.html
@@ -351,3 +351,4 @@
 </ng-template>
 
 <app-export-excel #exportExcel></app-export-excel>
+<app-recommendations [filterData]="filterApplyData" [kpiList]="kpiList"></app-recommendations>
