recommendations api changes

--- a/UI/src/app/component/recommendations/recommendations.component.css
+++ b/UI/src/app/component/recommendations/recommendations.component.css
@@ -89,6 +89,8 @@
 .m5 .maturity-indicator{
     background: #D38EEC;
 }
-/* :host ::ng-deep .p-tabview .p-tabview-nav li .p-tabview-nav-link{
-    background: #DF97B1;
-} */
+:host ::ng-deep  .p-dialog{   
+    width: auto !important;
+    max-width: 90vw !important;
+    min-width: 544px;
+}
