--- a/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.html
+++ b/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.html
@@ -37,7 +37,7 @@
                                 tooltipStyleClass="tooltiptext" [escape]="false"></span>
                         </label>
                     </div>
-                        <div id="comment-summary" class="btn-custom rounded p-p-0 filter-btn">
+                        <div id="comment-summary" class="btn-custom rounded filter-btn pt-3">
                             <img #commentSummary class="p-p-2 h-40 cursor-pointer" (click)="hitoryPopup.toggle($event);handleBtnClick(field.fieldName);"
                                 src="../../../assets/img/RequiresSyncIcon.svg" alt="History" />
                     </div>
