added releaseNodeId req param on kpiFieldmapping get call

--- a/UI/src/app/dashboard/milestone/milestone.component.html
+++ b/UI/src/app/dashboard/milestone/milestone.component.html
@@ -22,7 +22,7 @@
                               (optionSelected)="handleSelectedOption($event, kpi)" [showExport]="false" [isShow]="true"
                               [showChartView]="kpi?.kpiDetail?.boxType == 'chart'" [showCommentIcon]="true"
                               [commentCount]="kpiCommentsCountObj[kpi?.kpiId]"
-                              (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)">
+                              (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)" [nodeId]="filterApplyData?.selectedMap['release'][0]">
                               <ng-container *ngIf="!noTabAccess else noDataAccess">
                                 <div class="p-d-flex p-justify-around p-align-center w-100"
                                   *ngIf="(kpiChartData | json) !== '{}' && kpiChartData != undefined && kpiChartData[kpi?.kpiId]?.length > 0;else noData">
@@ -75,7 +75,7 @@
                                 (optionSelected)="handleSelectedOption($event, kpi)" [showExport]="true" [isShow]="true"
                                 [showChartView]="kpi?.kpiDetail?.boxType == 'chart' && !(kpiChartData[kpi.kpiId] &&  kpiChartData[kpi.kpiId]?.length === 0 && kpiLoader === false)"
                                 [showCommentIcon]="true" [commentCount]="kpiCommentsCountObj[kpi?.kpiId]"
-                                (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)">
+                                (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)" [nodeId]="filterApplyData?.selectedMap['release'][0]">
                                 <ng-container *ngIf="!noTabAccess else noDataAccess">
                                   <ng-container
                                     *ngIf="(kpiChartData | json) !== '{}' && kpiChartData != undefined;else noData">
@@ -181,7 +181,7 @@
                               (optionSelected)="handleSelectedOption($event, kpi)" [showExport]="false" [isShow]="true"
                               [showChartView]="kpi?.kpiDetail?.boxType == 'chart'" [showCommentIcon]="true"
                               [commentCount]="kpiCommentsCountObj[kpi?.kpiId]"
-                              (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)">
+                              (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)" [nodeId]="filterApplyData?.selectedMap['release'][0]">
                               <ng-container *ngIf="!noTabAccess else noDataAccess">
                                 <div class="p-d-flex p-justify-around p-align-center w-100"
                                   *ngIf="(kpiChartData | json) !== '{}' && kpiChartData != undefined && kpiChartData[kpi?.kpiId]?.length > 0;else noData">
@@ -234,7 +234,7 @@
                                 (optionSelected)="handleSelectedOption($event, kpi)" [showExport]="true" [isShow]="true"
                                 [showChartView]="kpi?.kpiDetail?.boxType == 'chart' && !(kpiChartData[kpi.kpiId] &&  kpiChartData[kpi.kpiId]?.length === 0 && kpiLoader === false)"
                                 [showCommentIcon]="true" [commentCount]="kpiCommentsCountObj[kpi?.kpiId]"
-                                (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)">
+                                (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)" [nodeId]="filterApplyData?.selectedMap['release'][0]">
                                 <ng-container *ngIf="!noTabAccess else noDataAccess">
                                   <ng-container
                                     *ngIf="(kpiChartData | json) !== '{}' && kpiChartData != undefined;else noData">
@@ -340,7 +340,7 @@
                               (optionSelected)="handleSelectedOption($event, kpi)" [showExport]="false" [isShow]="true"
                               [showChartView]="kpi?.kpiDetail?.boxType == 'chart'" [showCommentIcon]="true"
                               [commentCount]="kpiCommentsCountObj[kpi?.kpiId]"
-                              (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)">
+                              (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)" [nodeId]="filterApplyData?.selectedMap['release'][0]">
                               <ng-container *ngIf="!noTabAccess else noDataAccess">
                                 <div class="p-d-flex p-justify-around p-align-center w-100"
                                   *ngIf="(kpiChartData | json) !== '{}' && kpiChartData != undefined && kpiChartData[kpi?.kpiId]?.length > 0;else noData">
@@ -393,7 +393,7 @@
                                 (optionSelected)="handleSelectedOption($event, kpi)" [showExport]="true" [isShow]="true"
                                 [showChartView]="kpi?.kpiDetail?.boxType == 'chart' && !(kpiChartData[kpi.kpiId] &&  kpiChartData[kpi.kpiId]?.length === 0 && kpiLoader === false)"
                                 [showCommentIcon]="true" [commentCount]="kpiCommentsCountObj[kpi?.kpiId]"
-                                (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)">
+                                (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)" [nodeId]="filterApplyData?.selectedMap['release'][0]">
                                 <ng-container *ngIf="!noTabAccess else noDataAccess">
                                   <ng-container
                                     *ngIf="(kpiChartData | json) !== '{}' && kpiChartData != undefined;else noData">
@@ -501,7 +501,7 @@
                               (optionSelected)="handleSelectedOption($event, kpi)" [showExport]="false" [isShow]="true"
                               [showChartView]="kpi?.kpiDetail?.boxType == 'chart'" [showCommentIcon]="true"
                               [commentCount]="kpiCommentsCountObj[kpi?.kpiId]"
-                              (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)">
+                              (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)" [nodeId]="filterApplyData?.selectedMap['release'][0]">
                               <ng-container *ngIf="!noTabAccess else noDataAccess">
                                 <div class="p-d-flex p-justify-around p-align-center w-100"
                                   *ngIf="(kpiChartData | json) !== '{}' && kpiChartData != undefined && kpiChartData[kpi?.kpiId]?.length > 0;else noData">
@@ -554,7 +554,7 @@
                                 (optionSelected)="handleSelectedOption($event, kpi)" [showExport]="true" [isShow]="true"
                                 [showChartView]="kpi?.kpiDetail?.boxType == 'chart' && !(kpiChartData[kpi.kpiId] &&  kpiChartData[kpi.kpiId]?.length === 0 && kpiLoader === false)"
                                 [showCommentIcon]="true" [commentCount]="kpiCommentsCountObj[kpi?.kpiId]"
-                                (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)">
+                                (getCommentCountByKpi)="getKpiCommentsCount($event)" (reloadKPITab)="reloadKPI($event)" [nodeId]="filterApplyData?.selectedMap['release'][0]">
                                 <ng-container *ngIf="!noTabAccess else noDataAccess">
                                   <ng-container
                                     *ngIf="(kpiChartData | json) !== '{}' && kpiChartData != undefined;else noData">
