--- a/UI/src/app/dashboard/kpi-card/kpi-card.component.html
+++ b/UI/src/app/dashboard/kpi-card/kpi-card.component.html
@@ -199,7 +199,7 @@
             [fieldMappingConfig]="fieldMappingConfig" [formData]="selectedFieldMapping"
             [selectedConfig]="selectedConfig" [selectedToolConfig]="selectedToolConfig" (reloadKPI)="reloadKPI()"
             [thresholdUnit]="kpiData['kpiDetail']['kpiUnit']"
-            [kpiId]="kpiData?.kpiId" [metaDataTemplateCode]="metaDataTemplateCode" [parentComp]="'kpicard'"></app-field-mapping-form>
+            [kpiId]="kpiData?.kpiId" [metaDataTemplateCode]="metaDataTemplateCode" [nodeId]="nodeId" [parentComp]="'kpicard'"></app-field-mapping-form>
     </ng-template>
     <ng-template pTemplate="footer"></ng-template>
     <ng-container *ngIf=" noData && !loading">
