--- a/UI/src/app/config/project-config/jira-config/jira-config.component.css
+++ b/UI/src/app/config/project-config/jira-config/jira-config.component.css
@@ -79,3 +79,8 @@ display: block !important;
 ::ng-deep .field-mapping .p-autocomplete{
   width: 100%;
 }
+
+.link{
+  color : var(--color-secondary-blue);
+  cursor: pointer;
+}
