--- a/UI/src/app/config/project-config/jira-config/jira-config.component.html
+++ b/UI/src/app/config/project-config/jira-config/jira-config.component.html
@@ -41,7 +41,7 @@
             <ng-template pTemplate="caption">
                 <div class="table-header">
                     Available Connections
-                    <small>( To add new connection, go to "<em class="fas fa-plug"></em> Connections" )</small>
+                    <small>( To add new connection, go to "<span class="link" (click)="redirectToConnections()"><em class="fas fa-plug"></em>Connections</span>" )</small>
                     <span class="p-input-icon-left p-mr-3">
                         <i class="pi pi-search"></i>
                         <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')"
