--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -101,7 +101,7 @@
                     <span *ngIf="showProcessorLastState(processor.processorName) === 'NA'">NA</span>
                   </div>
                 <div class="p-ml-2" *ngIf="processor.processorName === 'Jira'">
-                  <i class="pi pi-info-circle" [ngClass]="{'cursor-pointer': (findTraceLogForTool('Jira')?.progressStatusList?.length || findTraceLogForTool('Jira')?.errorMessage) || jiraExecutionSteps?.length}"
+                  <i class="pi pi-info-circle" [ngClass]="{'disabled': !(findTraceLogForTool('Jira')?.progressStatusList?.length || findTraceLogForTool('Jira')?.errorMessage)}"
                   (click)="(findTraceLogForTool('Jira')?.errorMessage || findTraceLogForTool('Jira')?.progressStatusList?.length) ? op.toggle($event) : ''" style="font-size: 1.2rem"></i>
                 </div>
               </div>
@@ -138,26 +138,25 @@
 <p-overlayPanel #op [showCloseIcon]="false">
   <div class="dialog-body p-mb-4">
       <p-table [value]="findTraceLogForTool('Jira')?.progressStatusList" [tableStyle]="{ 'min-width': '40rem' }"
-       [scrollable]="true" scrollHeight="300px" *ngIf="findTraceLogForTool('Jira')?.progressStatusList?.length">
+       [scrollable]="true" scrollHeight="300px" *ngIf="findTraceLogForTool('Jira')?.progressStatusList?.length && !(findTraceLogForTool('Jira')?.errorMessage) ; else logError">
         <ng-template pTemplate="header">
             <tr>
               <th>Step Name</th>
-              <th>Start Time</th>
+              <th>End Time</th>
               <th>Status</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-item>
             <tr>
               <td>{{item.stepName}}</td>
-              <td>{{item.startTime |  date : 'MMM d, h:mm:ss a'}}</td>
+              <td>{{item.endTime |  date : 'MMM d, h:mm:ss a'}}</td>
               <td>{{item.status}}</td>
             </tr>
 
         </ng-template>
     </p-table>
-    <hr *ngIf="findTraceLogForTool('Jira')?.progressStatusList?.length && findTraceLogForTool('Jira')?.errorMessage">
-    <div *ngIf="findTraceLogForTool('Jira')?.errorMessage">
-      <h3 class="p-text-center" class="error-text"> <img src="../../../assets/img/icon-failure.svg" alt="Failure" class="p-mr-1" /> {{findTraceLogForTool('Jira')?.errorMessage}}</h3>
-    </div>
+    <ng-template #logError>
+      <h3 class="p-text-center" class="error-text"><img src="../../../assets/img/icon-failure.svg" alt="Failure" class="p-mr-1" />{{ findTraceLogForTool('Jira')?.errorMessage}}</h3>
+    </ng-template>
   </div>
 </p-overlayPanel>
