--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -109,7 +109,7 @@
               <td class='custom-table-cell p-d-flex p-align-center column-width'>
                 <button pButton pRipple label="Run Now"
                   icon="{{findTraceLogForTool(processor.processorName)?.executionOngoing === true ? 'pi pi-spin pi-spinner' : 'pi pi-forward'}}"
-                  [disabled]="shouldDisableRunProcessor() || findTraceLogForTool(processor.processorName)?.executionOngoing === true"
+                  [disabled]="(shouldDisableRunProcessor() || findTraceLogForTool(processor.processorName)?.executionOngoing === true) && processor.processorName !== 'Jira'  "
                   class="p-button-sm p-button-success p-button-raised" (click)="runProcessor(processor.processorName)"></button>
                   <div  class="action-btns p-ml-3" [ngClass]="{'disabled':!(getToolDetailsForProcessor(processor?.processorName)?.length > 0 && findTraceLogForTool(processor?.processorName))}" *ngIf="!shouldDisableRunProcessor()"><i class="far fa-trash-alt" (click)="deleteProcessorData(processor)"></i></div>
               </td>
